2001-08-07  Peter Stephenson  <pws@csr.com>

	* 15585: Doc/Zsh/contrib.yo, Functions/Zle/bash-down-case-word,
	Functions/Zle/bash-up-case-word: two new Zle functions with
	bash-style word boundaries.

	* 15583: Config/installfns.sh: ignore CVS directories for
	all function installations, not just with subdirectories.

2001-08-07  Sven Wischnowsky  <wischnow@zsh.org>

	* 15584: Src/parse.c: increment zwc fie version (which means
	changing the magic number)

2001-08-06  Oliver Kiddle  <opk@zsh.org>

	* 15574: Completion/Unix/Command/_cvs, Completion/Unix/Command/_dd,
	Completion/Unix/Command/_dict, Completion/Unix/Command/_grep,
	Completion/Unix/Command/_loadkeys, Completion/Unix/Command/_ls,
	Completion/Unix/Command/_patch, Completion/Unix/Command/_user_admin,
	Completion/Unix/Command/_wget, Completion/Unix/Type/_diff_options,
	Completion/Unix/Type/_directories,  Completion/Unix/Type/_groups,
	Completion/Unix/Type/_users: new _user_admin for useradd, groupmod etc,
	rewrite of _dd to use _values and make more completions share
	descriptions for long and short options

2001-08-03  Oliver Kiddle  <opk@zsh.org>

	* 15562, Akinori Musha: 15559, 15563: Completion/BSD/Command/_chflags,
	Completion/Unix/Command/_chown, Completion/Unix/Command/_sysctl:
	new BSD completion and fix _chown for symlinks

2001-07-31  Clint Adams  <clint@zsh.org>

	* 15551: Completion/Unix/Command/_gzip: handle -l and -t
	as done for -d; only complete presumably compressed files.

2001-07-31  Sven Wischnowsky  <wischnow@zsh.org>

	* 15549: Test/Y03arguments.ztst: fix for changed listing layout

2001-07-30  Sven Wischnowsky  <wischnow@zsh.org>

	* 15526: Completion/Base/Utility/_arguments, Src/Zle/computil.c:
	change order in which compgroups adds groups; add comment to
	_arguments trying to explain how and why the return value is
	wrong

2001-07-28  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 15511: Functions/Misc/zcalc, Doc/Zsh/contrib.yo: make